Bug 1636524 - [webgl] framebufferTexture requires bindTexture. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D77149